--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -274,11 +274,12 @@ body {
 }
 
 .bild {
-	height: 25;
-	width: 25;
-	left: 76%;
-	bottom: 60px;
-	position: relative;
+	background: url('bilder/blau.jpeg');
+    height: 20px;
+    width: 20px;
+    display: block;
+	background-size: 20px;
+	z-index: 4;
 }
 
 .rechner {
